--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
   <body>
     <section id="title-container" class="title-container">
       <div id="main-title" class="main-title">
-        <h1>Bretts Book Reviews</h1>
+        <h1><strong>Bretts Book Reviews</strong></h1>
       </div>
+    </section>
+    <section>
+      <img src="images/profilepic.png" alt="" id="profile-picture" class="profile-picture">
       <div id="intro-paragraph-container" class="intro-paragraph-container">
         <p>
-          Welcome to Brett’s Book Reviews! This is an experimental website in which I'm going to share my opinion on the books I read this year. I know my fans will be asking, nay... begging... for reviews from earlier years so that may be a future project 😚. Happy reading everybody and feel free to shoot me a friend request on Goodreads!
+          Welcome to Brett’s Book Reviews! This is an experimental website in
+          which I'm going to share my rating on the books I read this year. I
+          know my fans will be asking, nay... begging... for reviews from
+          earlier years so that may be a future project 😚. Happy reading
+          everybody and feel free to cash me on Goodreads!
         </p>
       </div>
     </section>
