--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
         </p>
       </div>
     </section>
+    <section id="book-overall-container" class="book-overall-container">
+      <div id="book-review-container" class="book-review-container">
+        <h2> 1. </h2>
+        <img src="images/youlikeitdarker.png" alt="">
+        <p> 
+          <strong>3.8/5</strong> 
+          Juicy and had some bangers but not my favorite Stephen King 
+        </p>
+        
+      </div>
+    </section>
 
     <script src="index.js" type="module"></script>
   </body>
