--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <div class="review-number">2.</div>
         <div class="book-image">
           <img
-            src="images/youlikeitdarker.png"
-            alt="You Like It Darker Book Cover"
+            src="images/dungeoncrawlercarl.png"
+            alt="Dungeon Crawler Carl"
           />
         </div>
-        <div class="review"> / 5</div>
+        <div class="review"> 4 / 5</div>
         <div class="review-writeup">
-          Juicy and had some bangers but not my favorite Stephen King.
+          Surprisingly fun romp. Actually funny and writing that keeps the reader engaged. Worth the read!
         </div>
       </div>
     </section>
