--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
       <div class="book-review-container">
         <div class="review-number">2.</div>
         <div class="book-image">
-          <img
-            src="images/dungeoncrawlercarl.png"
-            alt="Dungeon Crawler Carl"
-          />
+          <img src="images/dungeoncrawlercarl.png" alt="Dungeon Crawler Carl" />
         </div>
-        <div class="review"> 4 / 5</div>
+        <div class="review">4 / 5</div>
         <div class="review-writeup">
-          Surprisingly fun romp. Actually funny and writing that keeps the reader engaged. Worth the read!
+          Surprisingly fun romp. I was skeptical but it was genuinely funny and
+          the writing kept me engaged. Worth adding to the list and I plan to
+          finish the seven part series.
         </div>
       </div>
     </section>
