--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="review">4 / 5</div>
         <div class="review-writeup">
           Surprisingly fun romp. I was skeptical but it was genuinely funny and
-          the writing kept me engaged. Worth adding to the list and I plan to
-          finish the seven part series.
+          the writing kept me engaged. Worth adding to the list and I plan on
+          finishing the seven part series. 
         </div>
       </div>
     </section>
