--- a/index.html
+++ b/index.html
@@ -58,7 +58,21 @@
         <div class="review-writeup">
           Surprisingly fun romp. I was skeptical but it was genuinely funny and
           the writing kept me engaged. Worth adding to the list and I plan on
-          finishing the seven part series. 
+          finishing the seven part series.
+        </div>
+      </div>
+      <div class="book-review-container">
+        <div class="review-number">3.</div>
+        <div class="book-image">
+          <img src="images/innovators.png" alt="The Innovators" />
+        </div>
+        <div class="review">3.48 / 5</div>
+        <div class="review-writeup">
+          I couldn't do it.... I couldn't give this one a 4/5. Good but not
+          great writing. Felt like he was beating me over the head with
+          "ColLaBoRaTiOn". I get it, they had help. Bro, have you seen my github
+          commit log, you got the next Woz right here buddy. Anyway, 30% too
+          long but not the worst.
         </div>
       </div>
     </section>
